Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,5 @@ RoxygenNote: 7.1.1
 Imports: 
     dplyr,
     magrittr
+URL: https://github.com/sebsilas/pyin
+BugReports: https://github.com/sebsilas/pyin/issues
