Meta info updates

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: pyin
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Fundamental frequency estimation using the probabilistic YIN (pYIN) algorithm.
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Seb Silas
+Maintainer: Seb Silas sebsilas@gmail.com
+Description: Fundamental frequency estimation using the probabilistic YIN (pYIN) algorithm.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
