--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
 Imports: 
+    assertthat (>= 0.2.1),
     dplyr,
     fs,
     hrep (>= 0.15.0),
