--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,13 @@ Description: Fundamental frequency estimation using the probabilistic YIN (pYIN)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 Imports: 
     assertthat (>= 0.2.1),
     dplyr,
     fs,
     hrep (>= 0.15.0),
+    logging,
     magrittr,
     tibble
 URL: https://github.com/sebsilas/pyin
